--- a/chat.html
+++ b/chat.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'mon_app/base.html' %}
 
 {% block title %}Chat avec le Bot{% endblock %}
 
@@ -6,6 +6,7 @@
     <h1>Chat avec le Bot 🤖</h1>
 
     <form method="POST">
+        {% csrf_token %}
         <input type="text" name="message" placeholder="Écris ton message..." required>
         <button type="submit">Envoyer</button>
     </form>
