--- a/base.html
+++ b/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}ChatBot{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{% static 'mon_app/style.css' %}">
 </head>
 <body>
     <div class="container">
